--- a/templates/index.html
+++ b/templates/index.html
@@ -37,8 +37,9 @@
                         class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
                     >
                         <option value="artifish/llama3.2-uncensored">Llama 3.2 Uncensored</option>
+                        <option value="artifish/llama3.2-uncensored:latest-summarizer">Llama 3.2 Summarizer</option>
                         <option value="qwen2.5:7b-instruct-q4_K_M">Qwen 2.5</option>
-                        <option value="qwen-summarizer">Qwen Summarizer</option>
+                        <option value="qwen2.5:7b-instruct-q4_K_M-summarizer">Qwen 2.5 Summarizer</option>
                     </select>
                 </div>
                 
