--- a/templates/index.html
+++ b/templates/index.html
@@ -40,6 +40,7 @@
                         <option value="artifish/llama3.2-uncensored:latest-summarizer">Llama 3.2 Summarizer</option>
                         <option value="qwen2.5:7b-instruct-q4_K_M">Qwen 2.5</option>
                         <option value="qwen2.5:7b-instruct-q4_K_M-summarizer">Qwen 2.5 Summarizer</option>
+                        <option value="gemini">Gemini 1.5</option>
                     </select>
                 </div>
                 
